# _2block

./: Cargo.toml
assets/crane_mats/: default_mats.json
assets/load_charts/: liebherr_ltm_1100.csv  liebherr_ltm_1100.json
crates/crane_core/: Cargo.toml
crates/crane_core/benches/: quaternion_bench.rs  transform_bench.rs  vec3_bench.rs
crates/crane_core/src/: ground_bearing.rs  kinematics.rs  lib.rs  rigging.rs  types.rs
crates/crane_core/src/crane_data/: capacity.rs  configuration.rs  counterweight.rs  errors.rs  mod.rs  outriggers.rs  spec.rs
crates/crane_core/src/math/: mod.rs  quat.rs  transform.rs  vec3.rs
crates/crane_core/tests/: math_integration.rs  quaternion_properties.proptest-regressions  quaternion_properties.rs  transform_properties.rs  vec3_properties.rs
crates/scene_3d/: Cargo.toml
crates/scene_3d/src/: components.rs  coordinate_conversion.rs  crane_renderer.rs  lib.rs  load_renderer.rs  resources.rs  setup.rs  sling_renderer.rs  test_scene.rs
crates/scene_3d/src/camera/: camera_controller.rs  mod.rs  orbit_camera.rs
crates/scene_3d/src/input/: gesture_recognizer.rs  mod.rs  mouse_input.rs  navigation_command.rs  touch_input.rs
crates/ui_layer/: Cargo.toml
crates/ui_layer/src/: lib.rs  ui_state.rs
crates/ui_layer/src/panels/: load_configuration.rs
src/: lib.rs  main.rs
