[package]
name = "crane_core"
version.workspace = true
edition.workspace = true


[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
ron = { workspace = true }
uom = { workspace = true }
bevy_math = { workspace = true, optional = true }

wide = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
bevy = ["dep:bevy_math"]
simd = ["dep:wide"]

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vec3_bench"
harness = false
