[package]
name = "scene_3d"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_render",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_gltf",
  "bevy_ui",
  "bevy_text",
] }
# avian3d = { workspace = true }
crane_core = { path = "../crane_core" }
nalgebra = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
